<resources>
    <string name="app_name">Movie DB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newest_film">● Phim mới nhất</string>
    <string name="newest_loading_tv">Đang load phim mới nhất cho bạn...\n Hãy đợi trong giây lát</string>

    <string name="all">Tất cả</string>
    <string name="filter_hint">Chọn tiêu chí lọc và nhấn "Áp dụng bộ lọc" để tìm kiếm phim</string>
    <string name="ready_to_search">Sẵn sàng tìm kiếm</string>
    <string name="movie_count">%1$d phim</string>
    <string name="filter_empty">Chọn bộ lọc để tìm kiếm phim</string>
    <string name="apply_filter">Áp dụng bộ lọc</string>
    <string name="zero_movie">0 phim</string>
    <string name="watch_now">Xem ngay</string>

    <string name="filter_title">Bộ lọc phim</string>
    <string name="filter_subtitle">Tìm phim yêu thích</string>
    <string name="filter_criteria">Tiêu chí lọc</string>
    <string name="filter_type">Loại phim</string>
    <string name="filter_language">Ngôn ngữ</string>
    <string name="filter_country">Quốc gia</string>
    <string name="filter_year">Năm phát hành</string>
    <string name="clear_filter">Xóa bộ lọc</string>
    <string name="search_result">Kết quả tìm kiếm</string>
    <string name="search_history">Lịch sử tìm kiếm</string>
    <string name="loading_more_movies">Đang tải thêm phim...</string>
    <string name="no_result">Không tìm thấy kết quả phù hợp</string>
    <string name="loading">Đang tải...</string>
    <string name="top_search">Top tìm kiếm</string>
    <string name="please_enter_search_keyword">Vui lòng nhập từ khóa tìm kiếm</string>
    <string name="search">Search...</string>

    <string name="default_web_client_id">150266753810-jr9i7iq2s50ko3br9l7ehu12bsqvdfld.apps.googleusercontent.com</string>
    <string name="login_with_google">Đăng nhập bằng Google</string>
    <string name="login">Login</string>
    <string name="movie_db">Movie DB</string>
    <string name="invite_to_watch_party">GỬI LỜI MỜI TỚI BẠN BÈ</string>
    <string name="search_for_people">Tìm kiếm </string>
    <string name="invite">Gửi</string>
    <string name="no_users_found">Không tìm thấy người dùng</string>
    <string name="choose_a_friend">Chọn một bạn bè</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="watch_with_friends">Xem cùng bạn bè</string>
    <string name="loading_image">Loading Image</string>
    <string name="play_from_beginning">Xem từ đầu</string>
    <string name="session_and_episodes">Tập phim</string>
    <string name="ex_tap_1">01</string>
    <string name="invitation_button">Invitation Button</string>
    <string name="title_description">Mô tả</string>
    <string name="title_member">THÀNH VIÊN</string>
    <string name="out_room">Rời phòng</string>
    <string name="title_notification">Thông báo</string>
    <string name="favorite_movie">Phim Yêu Thích</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="sign_out_success">Đăng xuất thành công</string>
    <string name="sign_out_failed">Đăng xuất thất bại, hãy thử lại!</string>
    <string name="profile_avatar">Profile avatar</string>
</resources>
